Implemented: reverse_iterative_nostack

--- a/README
+++ b/README
@@ -2,6 +2,5 @@ Some standard singly linked list algorithms, plus an exercise in C++.
 
 Feel free to learn from it or verify/compare with your own. 
 
-Open to new ideas and improvements and further more link-list 
-algorithms.
+Open to new ideas, improvements and more link-list algorithms.
 
